make some changes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,6 +5,7 @@
     "tagline": "Authentic Italian Pizza & Halal Kebabs in Pavia",
     "orderOnline": "Order Online",
     "viewMenu": "View Full Menu",
+    "viewOnlineMenu": "View Online Menu",
     "orderVia": "Order via:",
     "platforms": {
       "justEat": "JustEat",
