--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -6,6 +6,7 @@
     "orderOnline": "Ordina Online",
     "viewMenu": "Visualizza Menu Completo",
     "orderVia": "Ordina tramite:",
+    "viewOnlineMenu": "Visualizza il menù online",
     "platforms": {
       "justEat": "JustEat",
       "deliveroo": "Deliveroo"
